--- a/src/main/resources/templates/cart/cartList.html
+++ b/src/main/resources/templates/cart/cartList.html
@@ -30,8 +30,9 @@
                                         </th>
                                         <th style="width: 10%;" scope="col">이미지</th>
                                         <th style="width: auto;" scope="col">상품정보</th>
+                                        <th style="width: 10%;" scope="col">판매가</th>
                                         <th style="width: 10%;" scope="col">수량</th>
-                                        <th style="width: 10%;" scope="col">상품구매금액</th>
+                                        <th style="width: 10%;" scope="col">상품주문금액</th>
                                         <th style="width: 10%;" scope="col">배송비</th>
                                         <th style="width: 10%;" scope="col">선택</th>
                                     </tr>
@@ -52,6 +53,11 @@
                                             </strong>
                                             <div class="option">[옵션: 선택 X]</div>
                                         </td>
+                                        <td class="item_price">
+                                            <span th:if="${cartItem.discount == 0}" th:text="|${#numbers.formatInteger(cartItem.price, 0, 'COMMA')}원|"></span>
+                                            <span th:if="${cartItem.discount > 0}" style="text-decoration: line-through" th:text="|${#numbers.formatInteger(cartItem.price, 0, 'COMMA')}원|"></span>
+                                            <strong th:if="${cartItem.discount > 0}" th:text="|${#numbers.formatInteger(cartItem.price * (1 - cartItem.discount), 0, 'COMMA')}원|"></strong>
+                                        </td>
                                         <td>
                                             <div class="cnt_box">
                                                 <input th:id="'count_' + ${cartItem.cartItemId}" class="order_cnt_input" type="text"
@@ -63,12 +69,13 @@
                                                 <span th:id="'stock_' + ${cartItem.cartItemId}" th:data-stock="${cartItem.stockNumber}"></span>
                                             </div>
                                         </td>
-                                        <td>
-                                            <strong th:id="'price_' + ${cartItem.cartItemId}" th:data-price="${cartItem.price}"
-                                                    th:text="|${#numbers.formatInteger(cartItem.price * cartItem.count, 0, 'COMMA')}원|"></strong>
+                                        <td class="total_price">
+                                            <strong th:id="'price_' + ${cartItem.cartItemId}" th:data-price="${cartItem.price}" th:data-discount="${cartItem.discount}"
+                                                    th:text="|${#numbers.formatInteger((cartItem.price * (1 - cartItem.discount)) * cartItem.count, 0, 'COMMA')}원|"></strong>
                                         </td>
-                                        <td>
-                                            2,500원
+                                        <td class="delivery_price">
+                                            <span>2,500원</span>
+                                            <span class="text">(30,000원 이상 무료)</span>
                                         </td>
                                         <td>
                                             <button th:data-id="${cartItem.cartItemId}" class="black_btn_w90_h30" onclick="order(this)">주문하기</button>
@@ -88,9 +95,10 @@
                                 <table class="table table-sm">
                                     <thead>
                                     <tr>
-                                        <th style="width: 35%;" scope="col">총 상품금액</th>
-                                        <th style="width: 35%;" scope="col">총 배송비</th>
-                                        <th style="width: 35%;" scope="col">결제예정금액</th>
+                                        <th style="width: 20%;" scope="col">상품 금액</th>
+                                        <th style="width: 20%;" scope="col">배송비</th>
+                                        <th style="width: 20%;" scope="col">할인 합계</th>
+                                        <th style="width: auto;" scope="col">최종 결제 금액</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -99,7 +107,10 @@
                                             <span class="order_total_price">0원</span>
                                         </td>
                                         <td>
-                                            <span class="order_delivery_price">+0원</span>
+                                            <span class="order_delivery_price">+ 0원</span>
+                                        </td>
+                                        <td>
+                                            <span class="order_discount_price">- 0원</span>
                                         </td>
                                         <td>
                                             = <span class="total_amount">0원</span>
@@ -158,29 +169,6 @@
             })
         });
 
-        function getOrderTotalPrice() {
-            let orderTotalPrice = 0;
-            let orderDeliveryPrice = 0;
-            $("input[name=cart_check]:checked").each(function () {
-                let cartItemId = $(this).val();
-                let price = $("#price_" + cartItemId).attr("data-price");
-                let count = $("#count_" + cartItemId).val();
-                orderTotalPrice += price * count;
-            });
-
-            if (orderTotalPrice >= 30000) {
-                orderDeliveryPrice = 0;
-            } else if (orderTotalPrice === 0) {
-                orderDeliveryPrice = 0;
-            } else {
-                orderDeliveryPrice = 2500;
-            }
-
-            $(".order_total_price").html(orderTotalPrice.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',') + '원');
-            $(".order_delivery_price").html('+' + orderDeliveryPrice.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',') + '원');
-            $(".total_amount").html((orderDeliveryPrice + orderTotalPrice).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',') + '원');
-        }
-
         function checkAll() {
             if ($("#check_all").prop("checked")) {
                 $("input[name=cart_check]").prop("checked", true);
@@ -190,6 +178,40 @@
             getOrderTotalPrice();
         }
 
+        /* 상품 금액, 배송비, 할인 합계, 최종 결제 금액 출력 */
+        function getOrderTotalPrice() {
+            let orderTotalPrice = 0; // 상품 금액
+            let orderDeliveryPrice = 2500; // 배송비
+            let orderDiscountPrice = 0; // 할인 합계
+            let totalAmount = 0; // 최종 결제 금액
+
+            $("input[name=cart_check]:checked").each(function () {
+                let cartItemId = $(this).val();
+                let price = $("#price_" + cartItemId);
+                let priceVal = price.attr("data-price");
+                let countVal = $("#count_" + cartItemId).val();
+
+                orderTotalPrice += priceVal * countVal;
+                orderDiscountPrice += (price.attr("data-price") * (price.attr("data-discount"))) * countVal;
+            });
+
+            totalAmount = orderTotalPrice - orderDiscountPrice;
+            // 최종 결제 금액 3만원 이상 배송비 무료
+            if (totalAmount >= 30000) {
+                orderDeliveryPrice = 0;
+            } else if (totalAmount === 0) {
+                orderDeliveryPrice = 0;
+            } else {
+                orderDeliveryPrice = 2500;
+            }
+
+            $(".order_total_price").html(orderTotalPrice.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',') + '원');
+            $(".order_delivery_price").html('+ ' + orderDeliveryPrice.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',') + '원');
+            $(".order_discount_price").html('- ' + orderDiscountPrice.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',') + '원')
+            $(".total_amount").html((totalAmount + orderDeliveryPrice).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',') + '원');
+        }
+
+        /* 수량 입력 시 동작 */
         function changeCount(obj) {
             let cartItemId = obj.id.split('_')[1];
             let price = $("#price_" + cartItemId);
@@ -198,18 +220,22 @@
 
             let countVal = obj.value;
             let priceVal = price.data("price");
-            let totalPrice = countVal * priceVal;
+            let totalPrice = Math.ceil((priceVal * (1 - price.attr("data-discount"))) * countVal);
             let minCnt = 1;
             let maxCnt = stock.attr("data-stock") * 1;
 
             if (countVal < minCnt) {
                 alert('수량은 1개 이상 입력해 주세요.');
                 count.val(1);
-                price.html(priceVal.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',') + "원");
+                price.html(Math.ceil((priceVal * (1 - price.attr("data-discount")))).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',') + "원");
+                getOrderTotalPrice();
                 return;
             } else if ( countVal > maxCnt ) {
                 alert('죄송합니다. 재고가 부족합니다.');
                 count.val(maxCnt);
+                price.html(Math.ceil((priceVal * (1 - price.attr("data-discount"))) * maxCnt).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',') + "원");
+                getOrderTotalPrice();
+                return;
             }
 
             price.html(totalPrice.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',') + "원");
@@ -217,6 +243,7 @@
             updateCartItemCount(cartItemId, countVal);
         }
 
+        /* 수량 조절 버튼 클릭 시 동작 */
         function changeCountBtn(obj) {
             let cartItemId = $(obj).attr("data-id");
             let count = $("#count_" + cartItemId);
@@ -243,16 +270,15 @@
                 }
             }
 
-            let totalPrice = countVal * priceVal;
+            let totalPrice = Math.ceil((priceVal * (1 - price.attr("data-discount"))) * countVal);
             count.val(countVal);
             price.html(totalPrice.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',') + "원");
             getOrderTotalPrice();
             updateCartItemCount(cartItemId, countVal);
         }
 
+        /* 아이템 수량 DB 업데이트 */
         function updateCartItemCount(cartItemId, count) {
-            console.log(count);
-
             $.ajax({
                 url: "/cartItem/" + cartItemId + "?count=" + count,
                 type: "PATCH",
@@ -272,6 +298,7 @@
             })
         }
 
+        /* 장바구니 상품 삭제 */
         function deleteCartItem(obj) {
             let cartItemId = obj.dataset.id;
 
@@ -298,6 +325,7 @@
             }
         }
 
+        /* 1개의 상품 주문 */
         function order(obj) {
             if (confirm("선택하신 상품을 주문하시겠습니까?")) {
                 let cartItemId = $(obj).attr("data-id");
@@ -333,9 +361,9 @@
             } else {
                 false;
             }
-
         }
 
+        /* 선택 복수 주문 */
         function orders() {
             if (confirm("선택하신 상품을 주문하시겠습니까?")) {
                 let paramData = {};
@@ -375,6 +403,7 @@
             }
         }
 
+        /* 전체 주문 */
         function ordersAllItems() {
             if (confirm("전체 상품을 주문하시겠습니까?")) {
                 $("input[name=cart_check]").prop("checked", true);
@@ -385,6 +414,7 @@
             }
         }
 
+        /* 쇼핑계속하기 버튼 */
         $(".resume_btn").on("click", function () {
             location.href = "/";
         });
