--- a/src/main/resources/templates/order/orderHist.html
+++ b/src/main/resources/templates/order/orderHist.html
@@ -34,12 +34,49 @@
                                     </tr>
                                 </thead>
                                 <tbody class="center">
-                                <th:block th:each="order, status: ${orders.getContent()}">
+                                    <th:block th:each="order, status: ${orders.getContent()}">
 
-                                    <th:block th:if="${#lists.size(order.orderItemDtoList) >= 2}">
-                                        <tr th:each="orderItem, status: ${order.orderItemDtoList}">
+                                        <th:block th:if="${#lists.size(order.orderItemDtoList) >= 2}">
+                                            <tr th:each="orderItem, status: ${order.orderItemDtoList}">
 
-                                            <td th:if="${status.index == 0}" th:rowspan="${#lists.size(order.orderItemDtoList)}" class="order_date" th:text="${order.orderDate}"></td>
+                                                <td th:if="${status.index == 0}"
+                                                    th:rowspan="${#lists.size(order.orderItemDtoList)}"
+                                                    class="order_date" th:text="${order.orderDate}"></td>
+                                                <td class="thumb">
+                                                    <a th:href="${'/item/' + orderItem.itemId}">
+                                                        <img th:src="${orderItem.imgUrl}">
+                                                    </a>
+                                                </td>
+                                                <td class="product left_top">
+                                                    <strong class="name">
+                                                        <a th:href="${'/item/' + orderItem.itemId}"
+                                                            th:text="${orderItem.itemNm}"></a>
+                                                    </strong>
+                                                    <div class="option">[옵션: 선택 X]</div>
+                                                </td>
+                                                <td th:text="${orderItem.count}"></td>
+                                                <td>
+                                                    <strong
+                                                        th:text="|${#numbers.formatInteger(orderItem.price, 0, 'COMMA')}원|"></strong>
+                                                </td>
+                                                <td class="state">
+                                                    <span th:if="${order.orderStatus == orderStatus}">배송 준비중</span>
+                                                    <span th:if="${order.orderStatus != orderStatus}">주문 취소</span>
+                                                </td>
+                                                <td th:if="${status.index == 0}"
+                                                    th:rowspan="${#lists.size(order.orderItemDtoList)}">
+                                                    <button th:if="${order.orderStatus == orderStatus}"
+                                                        class="black_btn_w65_h30" type="button"
+                                                        th:value="${order.orderId}" onclick="cancelOrder(this.value)">주문
+                                                        취소</button>
+                                                    <div th:unless="${order.orderStatus == orderStatus}">취소 완료</div>
+                                                </td>
+                                            </tr>
+                                        </th:block>
+
+                                        <tr th:if="${#lists.size(order.orderItemDtoList) < 2}"
+                                            th:each="orderItem, status: ${order.orderItemDtoList}">
+                                            <td class="order_date" th:text="${order.orderDate}"></td>
                                             <td class="thumb">
                                                 <a th:href="${'/item/' + orderItem.itemId}">
                                                     <img th:src="${orderItem.imgUrl}">
@@ -47,65 +84,38 @@
                                             </td>
                                             <td class="product left_top">
                                                 <strong class="name">
-                                                    <a th:href="${'/item/' + orderItem.itemId}" th:text="${orderItem.itemNm}"></a>
+                                                    <a th:href="${'/item/' + orderItem.itemId}"
+                                                        th:text="${orderItem.itemNm}"></a>
                                                 </strong>
                                                 <div class="option">[옵션: 선택 X]</div>
                                             </td>
                                             <td th:text="${orderItem.count}"></td>
                                             <td>
-                                                <strong th:text="|${#numbers.formatInteger(orderItem.orderPrice, 0, 'COMMA')}원|"></strong>
+                                                <strong
+                                                    th:text="|${#numbers.formatInteger(orderItem.price, 0, 'COMMA')}원|"></strong>
                                             </td>
                                             <td class="state">
                                                 <span th:if="${order.orderStatus == orderStatus}">배송 준비중</span>
                                                 <span th:if="${order.orderStatus != orderStatus}">주문 취소</span>
                                             </td>
-                                            <td th:if="${status.index == 0}" th:rowspan="${#lists.size(order.orderItemDtoList)}">
-                                                <button th:if="${order.orderStatus == orderStatus}" class="black_btn_w65_h30" type="button"
-                                                        th:value="${order.orderId}" onclick="cancelOrder(this.value)">주문 취소</button>
+                                            <td>
+                                                <button th:if="${order.orderStatus == orderStatus}"
+                                                    class="black_btn_w65_h30" type="button" th:value="${order.orderId}"
+                                                    onclick="cancelOrder(this.value)">주문 취소</button>
                                                 <div th:unless="${order.orderStatus == orderStatus}">취소 완료</div>
                                             </td>
                                         </tr>
+
                                     </th:block>
-
-                                    <tr th:if="${#lists.size(order.orderItemDtoList) < 2}" th:each="orderItem, status: ${order.orderItemDtoList}">
-                                        <td class="order_date" th:text="${order.orderDate}"></td>
-                                        <td class="thumb">
-                                            <a th:href="${'/item/' + orderItem.itemId}">
-                                                <img th:src="${orderItem.imgUrl}">
-                                            </a>
-                                        </td>
-                                        <td class="product left_top">
-                                            <strong class="name">
-                                                <a th:href="${'/item/' + orderItem.itemId}" th:text="${orderItem.itemNm}"></a>
-                                            </strong>
-                                            <div class="option">[옵션: 선택 X]</div>
-                                        </td>
-                                        <td th:text="${orderItem.count}"></td>
-                                        <td>
-                                            <strong th:text="|${#numbers.formatInteger(orderItem.orderPrice, 0, 'COMMA')}원|"></strong>
-                                        </td>
-                                        <td class="state">
-                                            <span th:if="${order.orderStatus == orderStatus}">배송 준비중</span>
-                                            <span th:if="${order.orderStatus != orderStatus}">주문 취소</span>
-                                        </td>
-                                        <td>
-                                            <button th:if="${order.orderStatus == orderStatus}" class="black_btn_w65_h30" type="button"
-                                                    th:value="${order.orderId}" onclick="cancelOrder(this.value)">주문 취소</button>
-                                            <div th:unless="${order.orderStatus == orderStatus}">취소 완료</div>
-                                        </td>
-                                    </tr>
-
-                                </th:block>
                                 </tbody>
                             </table>
-                            <div th:if="${#strings.isEmpty(orders.getContent())}" class="orders_null">
+
+                            <div th:if="${#lists.isEmpty(orders.getContent())}" class="orders_null">
                                 <p class="message">주문 내역이 없습니다.</p>
                             </div>
 
                             <div class="pagination mt-3"
-                                th:with="start=${(orders.number/maxPage)*maxPage + 1},
-                                                                 end=(${(orders.totalPages == 0) ? 1 :
-                                                                 (start + (maxPage - 1) < orders.totalPages ? start + (maxPage - 1) : orders.totalPages)})">
+                                th:with="start=${(orders.number/maxPage)*maxPage + 1}, end=(${(orders.totalPages == 0) ? 1 : (start + (maxPage - 1) < orders.totalPages ? start + (maxPage - 1) : orders.totalPages)})">
                                 <ul>
                                     <li class="prev" th:classappend="${orders.first} ? 'disabled'">
                                         <a th:onclick="'javascript:page(0)'">
@@ -148,20 +158,20 @@
     <script th:inline="javascript">
 
         function cancelOrder(orderId) {
-            if(confirm("선택하신 주문을 취소하시겠습니까?")){
+            if (confirm("선택하신 주문을 취소하시겠습니까?")) {
                 let paramData = {
-                    orderId : orderId,
+                    orderId: orderId,
                 };
 
                 let param = JSON.stringify(paramData);
 
                 $.ajax({
-                    url : "/order/" + orderId + "/cancel",
-                    type : "POST",
-                    contentType : "application/json",
-                    data : param,
-                    dataType : "json",
-                    cache : false,
+                    url: "/order/" + orderId + "/cancel",
+                    type: "POST",
+                    contentType: "application/json",
+                    data: param,
+                    dataType: "json",
+                    cache: false,
                     success: function (result, status) {
                         alert("주문이 취소 되었습니다.");
                         location.href = '/orders';
@@ -175,7 +185,7 @@
                         }
                     },
                 })
-            }else{
+            } else {
                 false;
             }
         }
