--- a/src/main/resources/templates/cart/cartList.html
+++ b/src/main/resources/templates/cart/cartList.html
@@ -146,17 +146,23 @@
                             <h4>장바구니 이용안내</h4>
                             <ol>
                                 <li class="item1">
-                                    [쇼핑계속하기] 버튼을 누르시면 쇼핑을 계속 하실 수 있습니다.
+                                    [전체 상품 주문] 버튼을 누르시면 모든 상품에 대한 주문/결제가 이루어집니다.
+
                                 </li>
                             </ol>
                             <ol>
                                 <li class="item2">
-                                    장바구니를 이용하여 원하시는 상품만 주문하실 수 있습니다.
+                                    [선택 상품 주문] 버튼을 통해 원하시는 상품만 선택하여 주문하실 수 있습니다.
                                 </li>
                             </ol>
                             <ol>
                                 <li class="item3">
-                                    총 상품 주문 금액이 30,000원 이상인 경우 배송비가 무료입니다.
+                                    [쇼핑계속하기] 버튼을 누르시면 쇼핑을 계속 하실 수 있습니다.
+                                </li>
+                            </ol>
+                            <ol>
+                                <li class="item4">
+                                    총 상품 금액(할인 적용된 금액)이 30,000원 이상인 경우 배송비가 무료입니다.
                                 </li>
                             </ol>
                         </div>
