[DESIGN] - 메인 화면 상품 정렬 버튼 추가

--- a/src/main/resources/static/css/scss/layout/_navigation.scss
+++ b/src/main/resources/static/css/scss/layout/_navigation.scss
@@ -24,6 +24,11 @@ nav {
             li {
                 padding: 20px 0;
 
+                a:hover,
+                button:hover {
+                    color: #999999;
+                }
+
                 a,
                 button {
                     font-size: 13px;
