--- a/src/main/resources/static/css/css/default.css
+++ b/src/main/resources/static/css/css/default.css
@@ -358,6 +358,10 @@ nav .menu .menu_link {
 nav .menu .menu_link li {
   padding: 20px 0;
 }
+nav .menu .menu_link li a:hover,
+nav .menu .menu_link li button:hover {
+  color: #999999;
+}
 nav .menu .menu_link li a,
 nav .menu .menu_link li button {
   font-size: 13px;
@@ -1313,7 +1317,7 @@ footer .footer_copyright {
   overflow: hidden;
 }
 #items .items_header {
-  margin: 0px auto 60px;
+  margin: 0px auto 40px;
 }
 #items .items_header h2 {
   font-size: 15px;
@@ -1325,9 +1329,59 @@ footer .footer_copyright {
   background: #aaa;
   margin: 20px auto;
 }
+#items .items_header .little_category .menu_category {
+  text-align: center;
+  font-size: 13px;
+  width: 100%;
+  margin: 30px 0;
+  letter-spacing: 0.04em;
+}
+#items .items_header .little_category .menu_category li {
+  display: inline-block;
+  margin: 0 18px 15px 18px;
+}
+#items .items_header .little_category .menu_category li a {
+  color: #999;
+  text-decoration: none;
+}
+#items .items_header .little_category .menu_category li a.active, #items .items_header .little_category .menu_category li a:hover {
+  color: #111;
+  text-decoration: underline;
+}
 #items .items_body {
   width: 80%;
   margin: 0 auto;
+}
+#items .items_body .normal_menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 20px;
+}
+#items .items_body .normal_menu .item_total,
+#items .items_body .normal_menu .item_filter {
+  font-size: 11px;
+  line-height: 25px;
+  color: #aaa;
+  letter-spacing: 0.02em;
+}
+#items .items_body .normal_menu .item_total span {
+  font-weight: bold;
+  color: #000;
+}
+#items .items_body .normal_menu .item_filter li {
+  display: inline-block;
+  margin-left: 12px;
+}
+#items .items_body .normal_menu .item_filter li a:hover {
+  color: #000;
+  font-weight: bold;
 }
 #items .items_body .search_result {
   padding: 50px;
