--- a/src/main/resources/static/css/scss/pages/_main.scss
+++ b/src/main/resources/static/css/scss/pages/_main.scss
@@ -3,7 +3,7 @@
     overflow: hidden;
 
     .items_header {
-        margin: 0px auto 60px;
+        margin: 0px auto 40px;
 
         h2 {
             font-size: 15px;
@@ -16,11 +16,71 @@
             background: #aaa;
             margin: 20px auto;
         }
+
+        .little_category {
+            .menu_category {
+                text-align: center;
+                font-size: 13px;
+                width: 100%;
+                margin: 30px 0;
+                letter-spacing: 0.04em;
+
+                li {
+                    display: inline-block;
+                    margin: 0 18px 15px 18px;
+
+                    a {
+                        color: #999;
+                        text-decoration: none;
+
+                        &.active,
+                        &:hover {
+                            color: #111;
+                            text-decoration: underline;
+                        }
+                    }
+                }
+            }
+        }
     }
 
     .items_body {
         width: 80%;
         margin: 0 auto;
+
+        .normal_menu {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+
+            .item_total,
+            .item_filter {
+                font-size: 11px;
+                line-height: 25px;
+                color: #aaa;
+                letter-spacing: 0.02em;
+            }
+
+            .item_total {
+                span {
+                    font-weight: bold;
+                    color: #000;
+                }
+            }
+
+            .item_filter {
+                li {
+                    display: inline-block;
+                    margin-left: 12px;
+
+                    a:hover {
+                        color: #000;
+                        font-weight: bold;
+                    }
+                }
+            }
+        }
 
         .search_result {
             padding: 50px;
